add_subdirectory(0201_SqList)
add_subdirectory(0202_Union)
add_subdirectory(0203_MergeSqList)
add_subdirectory(0204_LinkList)
add_subdirectory(0205_MergeList)
add_subdirectory(0206_SLinkList)
add_subdirectory(0207_Difference)
add_subdirectory(0208_DuLinkList)
add_subdirectory(0209_ELinkList)
add_subdirectory(0210_MergeEList)
add_subdirectory(0211_Polynomial)

add_subdirectory(0301_SqStack)
add_subdirectory(0302_Conversion)
add_subdirectory(0307_LinkQueue)
add_subdirectory(0308_SqQueue)

add_subdirectory(0401_SString)
add_subdirectory(0402_HString)
add_subdirectory(0404_KMP)

add_subdirectory(0501_Array)
add_subdirectory(0502_TSMatrix)
add_subdirectory(0504_CrossList)
add_subdirectory(0505_GList-HT)
add_subdirectory(0601_SqBiTree)
add_subdirectory(0602_BiTree)
add_subdirectory(0604_BiThrTree)
add_subdirectory(0608_MFSet)


add_subdirectory(0701_MGraph)
add_subdirectory(0702_ALGraph)
add_subdirectory(0705_SpanningTree)
add_subdirectory(0707_MinimumSpanningTree)
add_subdirectory(0709_TopologicalSorting)
add_subdirectory(0710_CriticalPathMethod)
add_subdirectory(0711_ShortestPaths)

add_subdirectory(0901_SequentialSearch)
add_subdirectory(0902_BinarySearch)
add_subdirectory(0903_BinarySortTree)
add_subdirectory(0904_1_BalanceBinaryTree)

add_subdirectory(1001_StraightInsertionSort)
add_subdirectory(1002_ShellSort)
add_subdirectory(1003_BubbleSort)
add_subdirectory(1004_QuickSort)
add_subdirectory(1005_SimpleSelectSort)
add_subdirectory(1006_HeapSort)
add_subdirectory(1007_MergingSort)
add_subdirectory(1008_RadixSort)